added a bunch of stuff- rough draft of all pages

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>GUSH</h1>
+        <h1>G.U.S.H.</h1>
         <h2>Great Underrated Songs, Honey</h2>
         </div>
          <!--NavBar, add hover link feature, make it look pretty-->
@@ -14,12 +14,12 @@
         <a id ="blog" href="./blog.html">Blog</a>
         <a id = "playlists" href="./Playlists.html">Playlists</a>
         <a id ="about" href="./about.html">About</a>
+        <a id="faq" href="./faq.html">Submissions/FAQ</a>
         <!--add search bar maybe?-->
     </div>
     <div>
-        <h2>About Me</h2>
-        <ul>
-            <li>Allison Hill</li>
-            <li></li>
-        </ul>
+        <h2 id="AboutMe">About Me!</h2>
+        <img src="./images/me.png" alt="A very cute selfie of Allison">
+        <p>Hi, my name is Allison (<em>she/her/hers</em>). I like to create things- music, photographs, block prints, you name it I've probably tried it! This little website is the latest of my creative endevors. I wanted to create an outlet to shout from the rooftops about all the awesome music I find and fall in love with. As a songwriter myself, I love the experience of thoughtfully listening to songs and albums to discover all the delightful little details that make them great. I spent a bit of time writing for <a href="https://www.thewildhoneypie.com/buzzing-daily">The Wild Honey Pie's Buzzing Daily blog</a>, where I discovered the tandem joy of creating a little work of writing that celebrates what makes a song truly great. I want to continue exploring that feeling, so I thought I'd create a little blog dedicated to all the music I can't help but gush about. </a></p>
+        <p><em>P.S.</em> If you're curious about what kind of music I make, check me out at <a href="https://denimdaisy.bandcamp.com/">denimdaisy.bandcamp.com</a> :)</p>
     </div>
