--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>GUSH</h1>
+        <h1>G.U.S.H.</h1>
         <h2>Great Underrated Songs, Honey</h2>
         </div>
         <!--NavBar, add hover link feature, make it look pretty-->
@@ -15,6 +15,7 @@
             <a id ="blog" href="./blog.html">Blog</a>
             <a id = "playlists" href="./Playlists.html">Playlists</a>
             <a id ="about" href="./about.html">About</a>
+            <a id="faq" href="./faq.html">Submissions/FAQ</a>
             <!--add search bar maybe?-->
         </div>
 <!--SAMPLE ENTRY-->
@@ -38,7 +39,7 @@
 <!--REAL LIFE SAMPLE ENTRY-->
 <div id="entry2" class="blogentry">
     <img src="./images/mp_perfect.jpg" alt="Cover Art of Manequinn Pussy's EP, Perfect"/>
-    <h2>Darling</h2>
+    <h2><a href ="./darling-mp.html">Darling</a></h2>
     <h3>Mannequin Pussy</h3>
     <!--links to song/artist/merch/etc.-->
     <div class="artistlinks">
