--- a/faq.html
+++ b/faq.html
@@ -1,13 +1,12 @@
 <head>
     <meta charset="UTF-8">
-      <title>Playlists</title>
+      <title>GUSH Home</title>
       <link rel="stylesheet" href="./style.css">
-      <link rel="stylesheet" href="./playliststyle.css">
     </head>
     <body>
         </div>
         <div class="header">
-          <h1>G.U.S.H.</h1>
+          <h1>GUSH</h1>
           <h2>Great Underrated Songs, Honey</h2>
           </div>
           <!--NavBar, add hover link feature, make it look pretty-->
@@ -20,18 +19,15 @@
               <!--add search bar maybe?-->
           </div>
           <!-- Featured section, nice scrolling header! -->
-          <h4 id="bndcmpr">playlists powered by <a href="https://bndcmpr.co/">bndcmpr</a></h4>
-          <div id="Gush1">
-            <h1 id="Gush1Title">GUSH Vol 1</12>
-            <iframe src="https://bndcmpr.co/embed/f65cd3b9?orientation=landscape" style="height:91px;width:100%;border:none;" title="GUSH Vol 1"></iframe>
-           <div class="tracklist">
-            <h2>Tracklist</h2> 
-            <ol>
-                <li><b>Darling</b> by Mannequin Pussy</li>
-                <li><b>Peach Pit</b> by Rosie Tucker</li>
-            </ol>
-           </div>    
-            
-        </div>
+        <div id ="submissions">
+        <h1>Submissions</h1>
+          <p>Got some music you think I should hear? Send it my way! :)</p>
+          </div>
+        <!--add a submission box-->
+          <div class="contact">
+              <a id= "emailbox" href="mailto:amh03160@gmail.com">Send Me an Email!</a>
+              <a id= "twitter" href="https://twitter.com/A_philharmonic8">Hit Me Up on Twitter!</a>
+              <a id= "insta" href="https://www.instagram.com/a_philharmonic/">Or Maybe Instagram?</a>
+          </div>
     
     </body>
