--- a/images/GUSH Home.html
+++ b/images/GUSH Home.html
@@ -6,7 +6,7 @@
 <body>
     </div>
     <div class="header">
-      <h1>G.U.S.H.</h1>
+      <h1>GUSH</h1>
       <h2>Great Underrated Songs, Honey</h2>
       </div>
       <!--NavBar, add hover link feature, make it look pretty-->
@@ -23,5 +23,5 @@
       <h1>Welcome!</h1>
       <p>I will eventually put featured things here!</p>
       </div>
-      <!--social links-->
+
 </body>
