--- a/darling-mp.html
+++ b/darling-mp.html
@@ -13,7 +13,7 @@
         <div id="navbar" class ="flex-container">
             <a id="home" href ="./index.html">Home</a>
             <a id ="blog" href="./blog.html">Blog</a>
-            <a id = "playlists" href="./Playlists.html">Playlists</a>
+            <a id = "playlists" href="./playlists.html">Playlists</a>
             <a id ="about" href="./about.html">About</a>
             <a id="faq" href="./faq.html">Submissions/FAQ</a>
             <!--add search bar maybe?-->
