added .js file, deprecated some links to streamline what i have so far

--- a/blog.html
+++ b/blog.html
@@ -18,12 +18,12 @@
             <a id="faq" href="./faq.html">Submissions/FAQ</a>
             <!--add search bar maybe?-->
         </div>
-<!--SAMPLE ENTRY-->
+<!--SAMPLE ENTRY
    <div id="entry1" class="blogentry">
     <img src="./images/placeholder.jpg" alt="placeholder image"/>
     <h2>SONG TITLE</h2>
     <h3>ARTIST</h3>
-    <!--links to song/artist/merch/etc.-->
+   [links to song/artist/merch/etc]
     <div class="artistlinks">
         <a class ="youtube" href ="https://www.youtube.com/watch?v=FT2eaBsNn84&ab_channel=EpitaphRecords">youtube</a>
         <a class="bandcamp" href="https://bandcamp.com">bandcamp</a>
@@ -36,6 +36,7 @@
        </p>
    </div>
     </div>
+-->
 <!--REAL LIFE SAMPLE ENTRY-->
 <div id="entry2" class="blogentry">
     <img src="./images/mp_perfect.jpg" alt="Cover Art of Manequinn Pussy's EP, Perfect"/>
