--- a/images/GUSH Home.html
+++ b/images/GUSH Home.html
@@ -11,11 +11,11 @@
       </div>
       <!--NavBar, add hover link feature, make it look pretty-->
       <div id="navbar" class ="flex-container">
-          <a id="home" href ="./index.html">Home</a>
+          <!--a id="home" href ="./index.html">Home</a-->
           <a id ="blog" href="./blog.html">Blog</a>
           <a id = "playlists" href="./playlists.html">Playlists</a>
-          <a id ="about" href="./about.html">About</a>
-          <a id="faq" href="./faq.html">Submissions/FAQ</a>
+          <a id ="about" href="./about.html">About/Submissions</a>
+          <!--a id="faq" href="./faq.html">Submissions/FAQ</a-->
           <!--add search bar maybe?-->
       </div>
       <!-- Featured section, nice scrolling header! -->
