consolidted about page to FAQ page, set up new submission page, updated navbar of all

--- a/darling-mp.html
+++ b/darling-mp.html
@@ -11,11 +11,10 @@
         </div>
         <!--NavBar, add hover link feature, make it look pretty-->
         <div id="navbar" class ="flex-container">
-            <a id="home" href ="./index.html">Home</a>
             <a id ="blog" href="./blog.html">Blog</a>
             <a id = "playlists" href="./playlists.html">Playlists</a>
-            <a id ="about" href="./about.html">About</a>
-            <a id="faq" href="./faq.html">Submissions/FAQ</a>
+            <a id="faq" href="./faq.html">About/FAQ</a>
+            <a id="submissionPage" href="./submissionPage.html">Submissions</a>
             <!--add search bar maybe?-->
         </div>
         <div id="entry2" class="blogentry">
