--- a/blog.html
+++ b/blog.html
@@ -11,12 +11,12 @@
         </div>
         <!--NavBar, add hover link feature, make it look pretty-->
         <div id="navbar" class ="flex-container">
-            <a id="home" href ="./index.html">Home</a>
             <a id ="blog" href="./blog.html">Blog</a>
             <a id = "playlists" href="./playlists.html">Playlists</a>
-            <a id ="about" href="./about.html">About</a>
-            <a id="faq" href="./faq.html">Submissions/FAQ</a>
+            <a id="faq" href="./faq.html">About/FAQ</a>
+            <a id="submissionPage" href="./submissionPage.html">Submissions</a>
             <!--add search bar maybe?-->
+        </div>
         </div>
 <!--SAMPLE ENTRY
    <div id="entry1" class="blogentry">
