--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-      <title>GUSH Home</title>
+      <title>FAQ</title>
       <link rel="stylesheet" href="./style.css">
     </head>
     <body>
@@ -11,23 +11,47 @@
           </div>
           <!--NavBar, add hover link feature, make it look pretty-->
           <div id="navbar" class ="flex-container">
-              <a id="home" href ="./index.html">Home</a>
               <a id ="blog" href="./blog.html">Blog</a>
               <a id = "playlists" href="./playlists.html">Playlists</a>
-              <a id ="about" href="./about.html">About</a>
-              <a id="faq" href="./faq.html">Submissions/FAQ</a>
+              <a id="faq" href="./faq.html">About/FAQ</a>
+              <a id="submissionPage" href="./submissionPage.html">Submissions</a>
               <!--add search bar maybe?-->
           </div>
-          <!-- Featured section, nice scrolling header! -->
+          <!-- Featured section, nice scrolling header! 
         <div id ="submissions">
         <h1>Submissions</h1>
           <p>Got some music you think I should hear? Send it my way! :)</p>
           </div>
-        <!--add a submission box-->
-          <div class="contact">
-              <a id= "emailbox" href="mailto:amh03160@gmail.com">Send Me an Email!</a>
-              <a id= "twitter" href="https://twitter.com/A_philharmonic8">Hit Me Up on Twitter!</a>
-              <a id= "insta" href="https://www.instagram.com/a_philharmonic/">Or Maybe Instagram?</a>
+        <div class="contact">
+          <a id= "emailbox" href="mailto:amh03160@gmail.com">Send Me an Email!</a>
+          <a id= "twitter" href="https://twitter.com/A_philharmonic8">Hit Me Up on Twitter!</a>
+          <a id= "insta" href="https://www.instagram.com/a_philharmonic/">Or Maybe Instagram?</a>
+        </div>
+        -->
+
+        <div id="faqInfo">
+          <h1>FAQ</h1>
+          <div id="aboutMe">
+            <h2>Who's the Writer?</h2>
+            <img src="./images/me.png" alt="A very cute selfie of Allison">
+            <p>Hi! I am! <b>My name is Allison Hill</b> (<em>she/her/hers</em>), and I'm the one who made pretty much everything you see here (minus the music & the playlisting tool, <a href ="https://bndcmpr.co/f65cd3b9
+              ">bndcmpr</a>). </p>
           </div>
-    
+          <div id="title">
+            <h2>Do You Take Submissions?</h2>
+            <p><b>Yes, I do!</b> If you've got something great that you want so share, go ahead and send it my way! The only thing I ask is that you please bear in mind I am a one-woman team. You can send me an <a href="mailto:amh03160@gmail.com">email</a>, <a href="https://twitter.com/A_philharmonic8">a twitter DM</a>, or through <a href="./submissionPage.html">my nifty submission form</a></p>
+          </div>
+          <div id="whyThis">
+            <h2>Why a Blog? Aren't They Going Out of Style?</h2>
+            <p>The answer to this one is short. <b>Because it's fun.</b> And this isn't the only blog I've written for, either! You can check out some of my other work with <a href="https://www.thewildhoneypie.com/buzzing-daily">The Wild Honey Pie's Buzzing Daily</a>.</p>
+          </div>
+          <div id="nameFAQ">
+            <h2>Why G.U.S.H.?</h2>
+            <p> As a songwriter myself, I love the experience of thoughtfully listening to songs and albums to discover all the delightful little details that make them great. I wanted to create an outlet to shout from the rooftops about all the awesome music I find and fall in love with, so I thought I'd create a little blog dedicated to all the music I can't help but gush about. :)</p>
+          </div>
+          <div id="myMusic">
+            <h2>You Make Music Too??</h2>
+            <p>Yes I do! If you're curious about what kind of music I make, check me out at <a href="https://denimdaisy.bandcamp.com/">denimdaisy.bandcamp.com</a> :)</p>
+          </div>
+        </div>
     </body>
