decided maybe the best course of action is embedding Google forms. Also i think this is a pretty solid rough draft

--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,7 @@
           </div>
           <div id="title">
             <h2>Do You Take Submissions?</h2>
-            <p><b>Yes, I do!</b> If you've got something great that you want so share, go ahead and send it my way! The only thing I ask is that you please bear in mind I am a one-woman team. You can send me an <a href="mailto:amh03160@gmail.com">email</a>, <a href="https://twitter.com/A_philharmonic8">a twitter DM</a>, or through <a href="./submissionPage.html">my nifty submission form</a></p>
+            <p><b>Yes, I do!</b> If you've got something great that you want so share, go ahead and send it my way! The only thing I ask is that you <b>please bear in mind I am a one-woman team!</b> As much as I would love to immediately respond to and write about everything piece of art that sparks interest, I do have the same 24 hours in a day as anyone else (most of which are occupied by work and school right now!). That being said, listening to new music brings me a lot of joy! So go ahead and send me an <a href="mailto:amh03160@gmail.com">email</a>, <a href="https://twitter.com/A_philharmonic8">a twitter DM</a>, or submit through <a href="./submissionPage.html">my nifty submission form</a></p>
           </div>
           <div id="whyThis">
             <h2>Why a Blog? Aren't They Going Out of Style?</h2>
